Update Two_Routes_Visual notebook: install json and read the json format to get the name, la, longtitude of the places then genereate the itinerary

--- a/notebooks/Two_Routes_Visual.ipynb
+++ b/notebooks/Two_Routes_Visual.ipynb
@@ -444,11 +444,108 @@
     "\n",
     "print(f\"Map saved!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1de821be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting json2html\n",
+      "  Downloading json2html-1.3.0.tar.gz (7.0 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Building wheels for collected packages: json2html\n",
+      "  Building wheel for json2html (pyproject.toml): started\n",
+      "  Building wheel for json2html (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for json2html: filename=json2html-1.3.0-py3-none-any.whl size=7694 sha256=6c8f63304638d2e43e73734bb0b6e7a05c807e0a40a472c500a7559094819b12\n",
+      "  Stored in directory: c:\\users\\99744\\appdata\\local\\pip\\cache\\wheels\\61\\94\\55\\83683c3c00a3f45cb4da4565208d8bd752133bab99610dba89\n",
+      "Successfully built json2html\n",
+      "Installing collected packages: json2html\n",
+      "Successfully installed json2html-1.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install json2html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c367a91e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Map has been generated successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import osmnx as ox\n",
+    "import networkx as nx\n",
+    "import folium\n",
+    "\n",
+    "# Load JSON data (example format provided)\n",
+    "with open('test_locations.json', 'r') as file:\n",
+    "    itinerary = json.load(file)\n",
+    "\n",
+    "# Example JSON structure (itinerary.json):\n",
+    "# [{\"name\": \"Attraction1\", \"lat\": 1.3114, \"lng\": 103.8531}, ...]\n",
+    "\n",
+    "# Extract attraction coordinates\n",
+    "locations = [(item['lat'], item['lng']) for item in itinerary]\n",
+    "names = [item['name'] for item in itinerary]\n",
+    "\n",
+    "# Fetch road network data around the first attraction\n",
+    "# the network type can be 'drive', 'walk', 'bike', 'all', 'all_private', 'none'\n",
+    "G = ox.graph_from_point(locations[0], dist=5000, network_type=\"drive\", simplify=True)\n",
+    "\n",
+    "# Find nodes for all attractions\n",
+    "nodes = [ox.nearest_nodes(G, lng, lat) for lat, lng in locations]\n",
+    "\n",
+    "# Calculate shortest paths between sequential attractions\n",
+    "routes = []\n",
+    "for i in range(len(nodes) - 1):\n",
+    "    route = nx.astar_path(G, nodes[i], nodes[i+1], weight=\"length\")\n",
+    "    routes.append(route)\n",
+    "\n",
+    "# Initialize Folium map centered on the first attraction\n",
+    "m = folium.Map(location=locations[0], zoom_start=14)\n",
+    "\n",
+    "# Plot all routes on map\n",
+    "for route, name_start, name_end in zip(routes, names[:-1], names[1:]):\n",
+    "    coords = [(G.nodes[node]['y'], G.nodes[node]['x']) for node in route]\n",
+    "    folium.PolyLine(coords, color=\"blue\", weight=5, opacity=0.8,\n",
+    "                    tooltip=f\"{name_start} → {name_end}\").add_to(m)\n",
+    "\n",
+    "# Add markers for each attraction\n",
+    "for coord, name in zip(locations, names):\n",
+    "    folium.Marker(coord, popup=name,\n",
+    "                  icon=folium.Icon(color=\"red\", icon=\"star\")).add_to(m)\n",
+    "\n",
+    "# Save map to HTML\n",
+    "m.save('an_itinerary_with_diff_places.html')\n",
+    "\n",
+    "print(\"Map has been generated successfully!\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -462,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
