ALNS Algorithm Changes

--- a/notebooks/Experiment_Simplified_Problem.ipynb
+++ b/notebooks/Experiment_Simplified_Problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,93 +725,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def visualize_solution(solution, hotel_name=None, budget=1000, num_days=2, max_attractions=8, max_hawkers=4):\n",
-    "    \"\"\"\n",
-    "    Main function to run the integrated problem with a specified hotel\n",
-    "    \n",
-    "    Args:\n",
-    "        hotel_name: Name of the hotel (optional)\n",
-    "    \n",
-    "    Returns:\n",
-    "        tuple: (result, problem, updated_locations)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Define constraints\n",
-    "    inequality_constraints = []\n",
-    "        # \"\"\"\n",
-    "        # day_one_attraction_limit = np.sum(x_var[0, :, :, :]) - 3 # should be <= 3\n",
-    "        # out[\"G\"].append(day_one_attraction_limit)\n",
-    "        # \"\"\"\n",
-    "    # ]\n",
-    "    equality_constraints = []\n",
-    "        # \"\"\"out[\"H\"].append(np.sum(x_var) - 5) # should be == 5\"\"\",\n",
-    "    # ]\n",
-    "\n",
-    "    # Get user-specified hotel or use default\n",
-    "    \n",
-    "    hotel = get_hotel_waypoint(hotel_name if hotel_name else None)\n",
-    "\n",
-    "    # Get transport matrix and locations\n",
-    "    logger.info(\"Loading transport matrix and locations...\")\n",
-    "    all_locations = get_all_locations()\n",
-    "    transport_matrix = get_transport_matrix()\n",
-    "    \n",
-    "    # Filter locations based on max_attractions and max_hawkers\n",
-    "    if max_attractions is not None or max_hawkers is not None:\n",
-    "        logger.info(f\"Filtering locations (max attractions: {max_attractions}, max hawkers: {max_hawkers})...\")\n",
-    "        all_locations = filter_locations(all_locations, max_attractions, max_hawkers)\n",
-    "        logger.info(f\"Filtered to {len(all_locations)} locations\")\n",
-    "    \n",
-    "    # Integrate hotel with locations and transport matrix\n",
-    "    updated_locations, updated_matrix = integrate_hotel_with_locations(\n",
-    "        hotel, all_locations, transport_matrix\n",
-    "    )\n",
-    "\n",
-    "    # For all locations, get necessary data (only if not already present)\n",
-    "    for loc in updated_locations:\n",
-    "        if loc[\"type\"] == \"hawker\":\n",
-    "            if not \"rating\" in loc:\n",
-    "                loc[\"rating\"] = np.random.uniform(0, 5)\n",
-    "            if not \"avg_food_price\" in loc:\n",
-    "                loc[\"avg_food_price\"] = np.random.uniform(5, 15)\n",
-    "            if not \"duration\" in loc:\n",
-    "                loc[\"duration\"] = 60  # just standardize 60 mins\n",
-    "        elif loc[\"type\"] == \"attraction\":\n",
-    "            if not \"satisfaction\" in loc:\n",
-    "                loc[\"satisfaction\"] = np.random.uniform(0, 10)\n",
-    "            if not \"entrance_fee\" in loc:\n",
-    "                loc[\"entrance_fee\"] = np.random.uniform(5, 100)\n",
-    "            if not \"duration\" in loc:\n",
-    "                loc[\"duration\"] = np.random.randint(30, 90)\n",
-    "        elif loc[\"type\"] == \"hotel\":\n",
-    "            # Set hotel duration to 0 (no time spent at hotel for activities)\n",
-    "            loc[\"duration\"] = 0\n",
-    "\n",
-    "    # make the problemset and solve it.\n",
-    "    logger.info(\"Creating and solving the optimization problem...\")\n",
-    "    problem = TravelItineraryProblem(\n",
-    "        num_days=num_days,\n",
-    "        budget=budget,\n",
-    "        locations=updated_locations,\n",
-    "        transport_matrix=updated_matrix,\n",
-    "    )\n",
-    "    \n",
-    "    heuristic_solution = solution\n",
-    "    \n",
-    "    save_solution_to_file(problem, heuristic_solution, \"log/heuristic_solution2.log\")\n",
-    "    \n",
-    "    validation_results = validate_heuristic_solution(problem, heuristic_solution)\n",
-    "    \n",
-    "    print_daily_routes(problem, validation_results)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +795,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danie\\AppData\\Local\\Temp\\ipykernel_55844\\1228327285.py:8: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\danie\\AppData\\Local\\Temp\\ipykernel_75708\\1228327285.py:8: RuntimeWarning: invalid value encountered in divide\n",
       "  nF = (F - approx_ideal) / (approx_nadir - approx_ideal)\n"
      ]
     }
@@ -898,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -923,51 +844,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-21 15:28:41,939 - WARNING - No hotel information provided, using default hotel\n",
-      "2025-03-21 15:28:41,940 - INFO - Loading transport matrix and locations...\n",
-      "2025-03-21 15:28:41,960 - INFO - Filtering locations (max attractions: 8, max hawkers: 4)...\n",
-      "2025-03-21 15:28:41,962 - INFO - Filtered to 12 locations\n",
-      "2025-03-21 15:28:41,962 - INFO - Added new hotel: DEFAULT HOTEL\n",
-      "2025-03-21 15:28:41,963 - INFO - Cached hotel routes validated successfully\n",
-      "2025-03-21 15:28:41,964 - INFO - Loaded hotel routes from memory cache for DEFAULT HOTEL\n",
-      "2025-03-21 15:28:41,965 - INFO - Added 96 hotel route entries to transport matrix\n",
-      "2025-03-21 15:28:41,967 - INFO - Creating and solving the optimization problem...\n",
-      "2025-03-21 15:28:41,968 - INFO - Validating optimization inputs...\n",
-      "2025-03-21 15:28:41,969 - INFO - Found 1 hotels in the data\n",
-      "2025-03-21 15:28:41,970 - INFO - Found 4 hawker centers in the data\n",
-      "2025-03-21 15:28:41,970 - INFO - Found 8 attractions in the data\n",
-      "2025-03-21 15:28:41,971 - INFO - Transport matrix contains all required routes (624 total)\n",
-      "2025-03-21 15:28:41,972 - INFO - Budget check passed: 1000 >= minimum 140 for hotel and food\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 1130 into shape (2,13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[47]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mvisualize_solution\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpymoo_solution\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 74\u001b[39m, in \u001b[36mvisualize_solution\u001b[39m\u001b[34m(solution, hotel_name, budget, num_days, max_attractions, max_hawkers)\u001b[39m\n\u001b[32m     65\u001b[39m problem = TravelItineraryProblem(\n\u001b[32m     66\u001b[39m     num_days=num_days,\n\u001b[32m     67\u001b[39m     budget=budget,\n\u001b[32m     68\u001b[39m     locations=updated_locations,\n\u001b[32m     69\u001b[39m     transport_matrix=updated_matrix,\n\u001b[32m     70\u001b[39m )\n\u001b[32m     72\u001b[39m heuristic_solution = solution\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m \u001b[43msave_solution_to_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheuristic_solution\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mlog/heuristic_solution2.log\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     76\u001b[39m validation_results = validate_heuristic_solution(problem, heuristic_solution)\n\u001b[32m     78\u001b[39m print_daily_routes(problem, validation_results)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36msave_solution_to_file\u001b[39m\u001b[34m(problem, solution, filename)\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Reshape solution into x_var and u_var\u001b[39;00m\n\u001b[32m     14\u001b[39m x_var = solution[:problem.x_shape].reshape(problem.NUM_DAYS, problem.num_transport_types, \n\u001b[32m     15\u001b[39m                                         problem.num_locations, problem.num_locations)\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m u_var = \u001b[43msolution\u001b[49m\u001b[43m[\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mx_shape\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNUM_DAYS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnum_locations\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Open file for writing\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[33m'\u001b[39m\u001b[33mw\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "\u001b[31mValueError\u001b[39m: cannot reshape array of size 1130 into shape (2,13)"
+      "2025-03-21 15:50:06,132 - WARNING - No hotel information provided, using default hotel\n",
+      "2025-03-21 15:50:06,133 - INFO - Loading transport matrix and locations...\n",
+      "2025-03-21 15:50:06,151 - INFO - Filtering locations (max attractions: 12, max hawkers: 8)...\n",
+      "2025-03-21 15:50:06,152 - INFO - Filtered to 20 locations\n",
+      "2025-03-21 15:50:06,153 - INFO - Added new hotel: DEFAULT HOTEL\n",
+      "2025-03-21 15:50:06,154 - WARNING - Missing routes between hotel and location 'Marina Bay Sands SkyPark Observation Deck' in cached data\n",
+      "2025-03-21 15:50:06,155 - WARNING - Memory-cached routes for DEFAULT HOTEL don't match current locations, cache invalid\n",
+      "2025-03-21 15:50:06,157 - INFO - API queries_quota: 60\n",
+      "2025-03-21 15:50:06,158 - INFO - Computing route matrices for hotel 'DEFAULT HOTEL' with 20 destinations\n",
+      "2025-03-21 15:50:06,158 - INFO - Computing transit route matrix for hour 8...\n",
+      "2025-03-21 15:50:27,518 - INFO - Computing driving route matrix for hour 8...\n",
+      "2025-03-21 15:50:48,670 - INFO - Computing transit route matrix from locations to hotel for hour 8...\n",
+      "2025-03-21 15:51:09,997 - INFO - Computing driving route matrix from locations to hotel for hour 8...\n",
+      "2025-03-21 15:51:31,153 - INFO - Computing transit route matrix for hour 12...\n",
+      "2025-03-21 15:51:52,578 - INFO - Computing driving route matrix for hour 12...\n",
+      "2025-03-21 15:52:13,710 - INFO - Computing transit route matrix from locations to hotel for hour 12...\n",
+      "2025-03-21 15:52:35,023 - INFO - Computing driving route matrix from locations to hotel for hour 12...\n",
+      "2025-03-21 15:52:56,148 - INFO - Computing transit route matrix for hour 16...\n",
+      "2025-03-21 15:53:17,474 - INFO - Computing driving route matrix for hour 16...\n",
+      "2025-03-21 15:53:38,624 - INFO - Computing transit route matrix from locations to hotel for hour 16...\n",
+      "2025-03-21 15:53:59,926 - INFO - Computing driving route matrix from locations to hotel for hour 16...\n",
+      "2025-03-21 15:54:21,120 - INFO - Computing transit route matrix for hour 20...\n",
+      "2025-03-21 15:54:42,477 - INFO - Computing driving route matrix for hour 20...\n",
+      "2025-03-21 15:55:03,637 - INFO - Computing transit route matrix from locations to hotel for hour 20...\n",
+      "2025-03-21 15:55:24,959 - INFO - Computing driving route matrix from locations to hotel for hour 20...\n",
+      "2025-03-21 15:55:25,072 - INFO - Successfully computed 160 hotel route entries across 4 time periods\n",
+      "2025-03-21 15:55:25,074 - INFO - Saved hotel routes to cache: data/cache\\hotel_routes_d89135969bd02f7f71312aa2de2e0c6a.pkl\n",
+      "2025-03-21 15:55:25,075 - INFO - Added 160 hotel route entries to transport matrix\n",
+      "2025-03-21 15:55:25,075 - INFO - Creating and solving the optimization problem...\n",
+      "2025-03-21 15:55:25,076 - INFO - Validating optimization inputs...\n",
+      "2025-03-21 15:55:25,077 - INFO - Found 1 hotels in the data\n",
+      "2025-03-21 15:55:25,077 - INFO - Found 8 hawker centers in the data\n",
+      "2025-03-21 15:55:25,078 - INFO - Found 12 attractions in the data\n",
+      "2025-03-21 15:55:25,079 - INFO - Transport matrix contains all required routes (1680 total)\n",
+      "2025-03-21 15:55:25,080 - INFO - Budget check passed: 1000 >= minimum 140 for hotel and food\n"
      ]
     }
    ],
    "source": [
-    "visualize_solution(pymoo_solution)"
+    "hotel_name=None \n",
+    "budget=1000\n",
+    "num_days=2\n",
+    "max_attractions=12\n",
+    "max_hawkers=8\n",
+    "# Define constraints\n",
+    "inequality_constraints = []\n",
+    "    # \"\"\"\n",
+    "    # day_one_attraction_limit = np.sum(x_var[0, :, :, :]) - 3 # should be <= 3\n",
+    "    # out[\"G\"].append(day_one_attraction_limit)\n",
+    "    # \"\"\"\n",
+    "# ]\n",
+    "equality_constraints = []\n",
+    "    # \"\"\"out[\"H\"].append(np.sum(x_var) - 5) # should be == 5\"\"\",\n",
+    "# ]\n",
+    "# Get user-specified hotel or use default\n",
+    "\n",
+    "hotel = get_hotel_waypoint(hotel_name if hotel_name else None)\n",
+    "# Get transport matrix and locations\n",
+    "logger.info(\"Loading transport matrix and locations...\")\n",
+    "all_locations = get_all_locations()\n",
+    "transport_matrix = get_transport_matrix()\n",
+    "\n",
+    "# Filter locations based on max_attractions and max_hawkers\n",
+    "if max_attractions is not None or max_hawkers is not None:\n",
+    "    logger.info(f\"Filtering locations (max attractions: {max_attractions}, max hawkers: {max_hawkers})...\")\n",
+    "    all_locations = filter_locations(all_locations, max_attractions, max_hawkers)\n",
+    "    logger.info(f\"Filtered to {len(all_locations)} locations\")\n",
+    "\n",
+    "# Integrate hotel with locations and transport matrix\n",
+    "updated_locations, updated_matrix = integrate_hotel_with_locations(\n",
+    "    hotel, all_locations, transport_matrix\n",
+    ")\n",
+    "# For all locations, get necessary data (only if not already present)\n",
+    "for loc in updated_locations:\n",
+    "    if loc[\"type\"] == \"hawker\":\n",
+    "        if not \"rating\" in loc:\n",
+    "            loc[\"rating\"] = np.random.uniform(0, 5)\n",
+    "        if not \"avg_food_price\" in loc:\n",
+    "            loc[\"avg_food_price\"] = np.random.uniform(5, 15)\n",
+    "        if not \"duration\" in loc:\n",
+    "            loc[\"duration\"] = 60  # just standardize 60 mins\n",
+    "    elif loc[\"type\"] == \"attraction\":\n",
+    "        if not \"satisfaction\" in loc:\n",
+    "            loc[\"satisfaction\"] = np.random.uniform(0, 10)\n",
+    "        if not \"entrance_fee\" in loc:\n",
+    "            loc[\"entrance_fee\"] = np.random.uniform(5, 100)\n",
+    "        if not \"duration\" in loc:\n",
+    "            loc[\"duration\"] = np.random.randint(30, 90)\n",
+    "    elif loc[\"type\"] == \"hotel\":\n",
+    "        # Set hotel duration to 0 (no time spent at hotel for activities)\n",
+    "        loc[\"duration\"] = 0\n",
+    "# make the problemset and solve it.\n",
+    "logger.info(\"Creating and solving the optimization problem...\")\n",
+    "problem = TravelItineraryProblem(\n",
+    "    num_days=num_days,\n",
+    "    budget=budget,\n",
+    "    locations=updated_locations,\n",
+    "    transport_matrix=updated_matrix,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.export_itinerary import export_itinerary\n",
+    "import os\n",
+    "itinerary_file = export_itinerary(problem, pymoo_solution, \"results/singapore_itinerary.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -987,6 +985,24 @@
     "# To check if ALL elements are equal\n",
     "are_equal = np.all(init_solution == pymoo_solution)\n",
     "print(are_equal)  # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_solution_int = init_solution.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_solution_int"
    ]
   }
  ],
