--- a/notebooks/Two_Routes_Visual.ipynb
+++ b/notebooks/Two_Routes_Visual.ipynb
@@ -508,6 +508,7 @@
     "# Extract attraction coordinates\n",
     "locations = [(item['lat'], item['lng']) for item in itinerary]\n",
     "names = [item['name'] for item in itinerary]\n",
+    "description = [item['description'] for item in itinerary]\n",
     "\n",
     "# Fetch road network data around the first attraction\n",
     "# the network type can be 'drive', 'walk', 'bike', 'all', 'all_private', 'none'\n",
