Update Location Agentic

--- a/src/agno_agents/samples/merge_2.ipynb
+++ b/src/agno_agents/samples/merge_2.ipynb
@@ -56,9 +56,9 @@
     "#     filtered_attraction_names = [name for name in attraction_names_llm if name in attraction_names_kb]\n",
     "#     remaining_attractions = [name for name in attraction_names_kb if name not in filtered_attraction_names]\n",
     "#     num_to_take_attraction = at_least_attraction - len(filtered_attraction_names)\n",
-    "#     sampled_attractins = random.sample(remaining_attractions, k=min(num_to_take_attraction, len(remaining_attractions)))\n",
+    "#     sampled_attractions = random.sample(remaining_attractions, k=min(num_to_take_attraction, len(remaining_attractions)))\n",
     "\n",
-    "#     filtered_rows_a = df_a[df_a['Attraction Name'].isin(sampled_attractins)]\n",
+    "#     filtered_rows_a = df_a[df_a['Attraction Name'].isin(sampled_attractions)]\n",
     "\n",
     "#     # Step 2: Convert to list of dictionaries\n",
     "#     new_data = []\n",
